--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
         <a href="https://wa.me/6287821991710" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Hadi Prasetia">
           <i class="fa-brands fa-whatsapp"></i> WhatsApp
         </a>
-        <a href="https://instagram.com/idhescobar_" target="_blank" rel="noopener noreferrer" aria-label="Instagram Hadi Prasetia">
-          <i class="fa-brands fa-instagram"></i> @idhescobar_
+        <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Hadi Prasetia">
+          <i class="fa-brands fa-instagram"></i> @
         </a>
         <a href="https://www.linkedin.com/in/hadi-prasetia-300044365" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hadi Prasetia">
           <i class="fa-brands fa-linkedin"></i> Hadi Prasetia
